--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,9 @@
 	"files.associations": {
 		"*.ejs": "html",
 		"*.h": "swift",
-		"memory": "cpp"
+		"memory": "cpp",
+		"iostream": "cpp",
+		"ostream": "cpp",
+		"string_view": "cpp"
 	}
 }
